update crypto password
