# src/routes/categories.routes.ts
@@ -3,7 +3,7 @@ import multer from 'multer'
 
 import { CreateCategoryController } from '../modules/cars/useCases/createCategory/CreateCategoryController'
 import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
 
 const categoriesRoutes = Router()
 
@@ -15,12 +15,12 @@ const createCategoryController = new CreateCategoryController()
 
 const importCategoryController = new ImportCategoryController()
 
+const listCategoriesController = new ListCategoriesController()
+
 categoriesRoutes.post("/", createCategoryController.handle)
 
-categoriesRoutes.get("/", (request, response) => {
-    return listCategoriesController.handle(request, response)
-})
+categoriesRoutes.get("/", listCategoriesController.handle )
 
-categoriesRoutes.post("/import", importCategoryController.handle)
+categoriesRoutes.post("/import", upload.single("file"), importCategoryController.handle)
 
 export {categoriesRoutes}
